--- a/scripts/package.json
+++ b/scripts/package.json
@@ -10,8 +10,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "eslint-plugin-prettier": "^5.0.0",
     "@taquito/signer": "^17.3.0",
     "@taquito/taquito": "^17.3.0",
-    "@taquito/utils": "^17.3.0"
+    "@taquito/utils": "^17.3.0",
+    "dotenv": "^16.3.1",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint": "^8.48.0",
+    "path": "^0.12.7",
+    "ts-node": "^10.9.1"
   }
 }
