--- a/scripts/package.json
+++ b/scripts/package.json
@@ -5,7 +5,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "deploy": "npx ts-node deploy.ts"
   },
   "author": "",
   "license": "ISC",
