--- a/scripts/package.json
+++ b/scripts/package.json
@@ -6,6 +6,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "tester": "npx ts-node call_submitNumber.ts",
     "deploy": "npx ts-node deploy.ts"
   },
   "author": "",
