--- a/scripts/package.json
+++ b/scripts/package.json
@@ -12,13 +12,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "eslint-plugin-prettier": "^5.0.0",
     "@taquito/signer": "^17.3.0",
     "@taquito/taquito": "^17.3.0",
     "@taquito/utils": "^17.3.0",
+    "@types/fs-extra": "^11.0.1",
     "dotenv": "^16.3.1",
-    "eslint-config-prettier": "^9.0.0",
     "eslint": "^8.48.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-prettier": "^5.0.0",
+    "fs-extra": "^11.1.1",
     "path": "^0.12.7",
     "ts-node": "^10.9.1"
   }
