--- a/package.json
+++ b/package.json
@@ -16,12 +16,15 @@
     "@taquito/taquito": "^17.3.0",
     "@taquito/utils": "^17.3.0",
     "@types/fs-extra": "^11.0.1",
+    "@types/mocha": "^10.0.1",
     "dotenv": "^16.3.1",
     "eslint": "^8.48.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
     "fs-extra": "^11.1.1",
+    "mocha": "^10.2.0",
     "path": "^0.12.7",
+    "ts-mocha": "^10.0.0",
     "ts-node": "^10.9.1"
   }
 }
