fix(.envdist): update env variables

--- a/.envdist
+++ b/.envdist
@@ -1,3 +1,4 @@
-TEZOS_NODE_URL=
-ADMIN_PUBLIC_KEY=
-ADMIN_PRIVATE_KEY=
+TEZOS_NODE_URL="http://localhost:20000"
+# ALICE FROM FLEXTESA
+ADMIN_PUBLIC_KEY="tz1VSUr8wwNhLAzempoch5d6hLRiTh8Cjcjb"
+ADMIN_PRIVATE_KEY="edsk3QoqBuvdamxouPhin7swCvkQNgq4jP5KZPbwWNnwdZpSpJiEbq"
