--- a/.github/workflows/actions.yaml
+++ b/.github/workflows/actions.yaml
@@ -9,6 +9,6 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: LIGO Compile
-    - run: make ligo-compile
+      run: make ligo-compile
     - name: LIGO Test
-    - run: make ligo-test
+      run: make ligo-test
